@@ -1,8 +1,9 @@
 <b><u> v2.19, xx.09.2016</b></u>
 <font color=#FF8C00>&#9830;</font> Add pins to the worldmap. (Shift+ Left-click to add a pin)
 <font color=#FF8C00>&#9830;</font> Adjust position of BossEmotes.
-<font color=#FF8C00>&#9830;</font> Add a GroupInfo frame.
-<font color=#FF8C00>&#9830;</font> More work on the ObjectiveTracker.
+<font color=#FF8C00>&#9830;</font> Add a GroupInfo frame. Wich shows additional info's about the raid.
+<font color=#FF8C00>&#9830;</font> Remove the skin for the ObjectiveTracker. Had too much trouble with it.
+<font color=#FF8C00>&#9830;</font> Massive overhaul of the DPS Layout.
 
 <b><u> v2.18, 15.09.2016</b></u>
 <font color=#FF8C00>&#9830;</font> Completly rewrite and overhaul the ObjectiveTracker Skin. (Still WIP)
